--- a/style.css
+++ b/style.css
@@ -74,22 +74,26 @@ section h3 {
 }
 
 /*Projects Section*/
-
+h3 {
+    margin: 0 auto;
+}
 #projects {
     background-color: rgb(218, 179, 255);
 }
 
-.allProjects {
+.projects {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: auto;
+    text-align: center;
 }
 
-.project img {
-    width: auto;
-    height: 350px;
+.projects img {
+    width: 400px;
+    height: auto;
 }
+
 
 /*About me Section*/
 
@@ -114,4 +118,15 @@ section h3 {
 /*Contact Section*/
 #contact {
     background-color: rgb(197, 227, 252);
+    height: 50vh;
+}
+
+#contact p {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.contact {
+    display: flex;
+    justify-content: space-around;
 }
